# futsal-tactical-offline

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: data-model.md  mp4-vertical-slice.md  mvp-offline-spec.md  release-process.md
scripts/: check-preview-export-parity.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_export_control_and_schema_version.sql  0003_project_metadata_and_library.sql  0004_project_court_type_focus.sql  0005_export_job_request.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  renderer.rs
src/components/: TacticalCanvas.tsx
src/components/home/: DashboardView.tsx  QuickCreateGrid.tsx
src/components/layout/: AppFrame.tsx  BottomDock.tsx  DeletePlayDialog.tsx  DevDrawer.tsx  LeftRail.tsx  ProjectDialog.tsx  RightRail.tsx  TopCommandBar.tsx
src/components/presentation/: PresentationView.tsx
src/components/shell/: LegacyShell.tsx
src/lib/: browserStorage.ts  canvasRenderer.ts  defaultProject.ts  editorCommands.ts  editorInteractions.ts  exportFlow.ts  layout.ts  playMetadata.ts  projectAutosave.ts  projectPackage.ts  projectSchema.ts  projectTemplates.ts  projectThumbnail.ts  teamPresets.ts  timeline.ts  uiLabels.ts
src/state/: useEditorState.ts  useUiState.ts
src/styles/: components.css  layout.css  tokens.css
src/types/: domain.ts  ui.ts
tests/: milestone2-interactions.test.ts
tests/parity/: fixture-full.json  fixture-half-defending.json  fixture-half.json
