[package]
name = "futsal-tactical-offline"
version = "0.1.0"
description = "Offline-first futsal tactics desktop app"
authors = ["Futsal Tactical Team"]
edition = "2021"
default-run = "futsal-tactical-offline"

[lib]
name = "futsal_tactical_offline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
font8x8 = "0.3"
image = "0.25"
imageproc = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
